Dependency updates; tweak benchmark configuration